etc/config-template.toml: Reflect new logging settings

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -5,7 +5,7 @@
 #   Time(based on ms): ms, s, m, h
 #    e.g.: 78_000 = "1.3m"
 
-# log level: trace, debug, info, warn, error, off.
+# log level: trace, debug, info, warning, error, critical.
 # log-level = "info"
 # file to store log, write to stderr if it's empty.
 # log-file = ""
